# follow-train-data-v5

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release-workflow.yml
follow_train_data/: generate.py
